# userver-openapi-extension

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cmakelists.txt  CreatePart.cmake  InitializeCppMacro.cmake  Makefile
.github/workflows/: ci.yaml  delete_old_runs.yaml  format.yaml  update-submodules.yaml
CMake/: CreatePart.cmake  CreateVariable.cmake  InitializeCppMacro.cmake
checks/service/: CMakeLists.txt
checks/service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
checks/service/main/: main.cpp
checks/service/tests/: test_basic.py
checks/unit/: mock_appenders.hpp  mock_converters.hpp  mock_openapi_name.hpp  raw_string.hpp  test_for_each_named_field.cpp
checks/unit/enum/: declare.cpp  enumerator_func.cpp
checks/unit/http/: request_info.cpp  response_info.cpp  schema_path.cpp  schema_request.cpp  schema_response.cpp
checks/unit/schema/: array.cpp  double.cpp  enum.cpp  float.cpp  generic_integer.cpp  int32.cpp  int64.cpp  object.cpp  string.cpp
checks/unit/utils/: type_name_info.cpp
checks/unit/validate/: array.cpp  double.cpp  string.cpp  string_format.cpp
scripts/: format_includes.py  generate_all_headers.py
tests-service/: CMakeLists.txt
tests-service/configs/configs/: static_config.yaml
tests-service/service/: main.cpp
tests-service/testsuite/: test_basic.py
tests-unit/: mock_appenders.hpp  mock_converters.hpp  mock_openapi_name.hpp  test_for_each_named_field.cpp
tests-unit/http/: response_info.cpp  schema_request.cpp  schema_response.cpp
tests-unit/schema/: int64.cpp  object.cpp
tests-unit/utils/: type_name_info.cpp
tests-unit/validate/: array.cpp  double.cpp
